<resources>
    <string name="app_name">TomoeSushi</string>
    <string name="arraste">Arraste para o lado</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="tel">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confSenha">Confirmar senha</string>
    <string name="NoCadastro"><u>Ainda não tem cadastro</u></string>

    <string name="save">Salvar</string>

    <string name="item">Itens</string>
    <string name="res">Reserva</string>
    <string name="pag">Pagamento</string>
    <string name="confirmado">Confirmado</string>
    <string name="conf">Confirmar</string>
    <string name="cont">Continuar</string>
    <string name="login">Login</string>

    <string name="obg">Agradecemos pela preferência</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_principal">principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Pedidos">Pedido(s)</string>
    <string name="Pedido"><u>Pedido(s)</u></string>

    <string name="procura">Itens</string>

    <string name="localizacao">Minha localização</string>
    <string name="infoTel">11 98367-6652</string>
    <string name="infoMail">tomoeSushi@gmail.com</string>
    <string name="infoEnd">Rua Guaipá - Imperatriz Leopoldina - SP</string>
    <string name="contactUs"><u>Clique para entrar em contato</u></string>

    <string name="AdressDelivery">Endereço para entrega</string>

    <string name="optional">Preenchimento opcional:</string>
    <string name="cep">CEP</string>
    <string name="or">ou</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="number">Número</string>


    <string name="get_location">Obter Localização</string>
    <string name="android_image">Android Logo</string>
    <string name="textview_hint">Clique no botão para iniciar
    </string>
    <string name="location_permission_denied">Permissão negada, autorize a aplicação
    </string>
    <string name="address_text">"%1$s"</string>

    <string name="no_location">Localização Indisponível</string>
    <string name="no_address_found">Endereço não disponível</string>
    <string name="loading">Carregando…</string>
    <string name="service_not_available">Serviço Indisponível</string>
    <string name="invalid_lat_long_used">Coordenadas Inválidas</string>
    <string name="start_tracking_location">Iniciar a Busca</string>
    <string name="stop_tracking_location">Parar a Busca</string>
    <string name="nowLocation">Localização atual</string>
    <string name="iniciar">Permitir busca</string>

    <string name="outrolocal">Outra(s)</string>
    <string name="pular">Pular</string>
    <string name="user">Nome de usuário</string>

    <string name="markDate"><b>Selecione o dia desejado</b></string>
    <string name="escolha_um_hor_rio">Escolha um horário</string>
    <string name="reserva">Reserva</string>
    <string name="quantAssentos">Quantidade de assentos:</string>
</resources>