<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:padding="20dp"
    android:layout_width="350dp"
    android:layout_height="400dp">

    <TextView
        android:id="@+id/op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:hint="@string/optional"/>

    <com.example.tomoesushi.CustomView
        android:id="@+id/cep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/cep"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@id/op"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/btnCEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_done_24"
        android:layout_toRightOf="@id/cep"
        android:ems="10"
        android:layout_below="@id/op"
        android:layout_centerHorizontal="true"/>

    <com.example.tomoesushi.CustomView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/logradouro"
        android:layout_marginTop="20dp"
        android:layout_below="@id/cep"
        android:inputType="textPersonName"/>

    <com.example.tomoesushi.CustomView
        android:id="@+id/comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/complemento"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:layout_below="@id/log"
        android:inputType="textPersonName" />

    <com.example.tomoesushi.CustomView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/comp"
        android:layout_marginTop="15dp"
        android:hint="@string/number"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/pular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/pular"
        android:layout_marginRight="5dp"
        android:textColorHint="@color/white"
        android:layout_weight="1" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/save"
        android:textColorHint="@color/white"
        android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>