<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciologin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/branco"/>

    <com.example.tomoesushi.CustomView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:layout_marginTop="25dp"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:backgroundTint="@color/cardview_light_background"
        android:textColorHint="@color/white"
        android:textStyle="normal" />


    <EditText
        android:id="@+id/ETsenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/cardview_light_background"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="Enter"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/conf"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:hint="@string/NoCadastro"
        android:onClick="Cadastrar"
        android:textSize="18sp"/>
</LinearLayout>