<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context=".FazerReserva">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantAssentos"
            android:textColorHint="#640202"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/numPs"
            android:layout_width="50dp"
            android:ems="10"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="number"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:hint="@string/markDate"
        android:textColorHint="#640202"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff">
        
        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="320dp">

        </CalendarView>
    </LinearLayout>

    <Button
        android:id="@+id/confReserva"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/conf"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/hor"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/conf"
        android:onClick="H"
        android:textColorHint="@color/white"/>


</LinearLayout>