<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="200dp"
        android:layout_height="210dp"
        app:cardCornerRadius="5dp"
        android:elevation="400dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/sushibranco"
            tools:ignore="VectorDrawableCompat" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play"
                android:hint="@string/nome"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NomeAlterarTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColorHint="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/tel"
                android:textSize="18sp"
                android:textColorHint="@color/black"/>

            <TextView
                android:id="@+id/TelAlterarTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColorHint="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:textSize="18sp"
                android:textColorHint="@color/black"/>

            <TextView
                android:id="@+id/EmailAlterarTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColorHint="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>