<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyLocation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/endEntrega"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:drawableLeft="@drawable/ic_baseline_place_othercolor"
                android:hint="@string/AdressDelivery"
                android:textColorHint="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textFontWeight="1"
                android:hint="@string/nowLocation"
                android:textColorHint="@color/black"
                android:layout_margin="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:elevation="40dp">

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textColorHint="@color/black"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textFontWeight="1"
                android:hint="@string/outrolocal"
                android:textColorHint="@color/black"
                android:layout_margin="10dp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:elevation="40dp">

                <TextView
                    android:id="@+id/txtInternal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>